:lipstick: Fix z-index and positioning

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   position: fixed;
   top: 0px;
   right: 0px;
-  z-index: 2147483647;
+  z-index: 9999;
   background-color: white;
   box-shadow: 0px 0px 5px #0000009e;
 }
@@ -51,6 +51,8 @@
   position: fixed;
   bottom: 0;
   right: 0;
+  border: none;
+  z-index: 9999;
 }
 
 #chakra-portal-1 iframe {
@@ -59,4 +61,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  border: none;
+  z-index: 9999;
+  position: fixed;
 }
